--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
